--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="sobre-mi">
         <div class="container d-none d-sm-none d-md-block">
 
-            <h4 class="display-5 text-center my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <h4 class="display-5 text-center my-4">Diseñadora Gráfica con más de 6 años de experiencia. Actualmente me encuentro desempeñado la labor de Diseñadora y Community Manager, y además de estudiar Diseño UX/UI en la Academia Desafío Latam.</h4>
 
             <p><hr width=20% size=20 color="#000000"></p>
 
