cambio texto parrafo izquierda

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, provident omnis nam sint, quia nesciunt enim deserunt dolorem dignissimos, veniam illum laudantium numquam! Minima harum sint porro quaerat tempore doloribus.</p>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, provident omnis nam sint, quia nesciunt enim deserunt dolorem dignissimos, veniam illum laudantium numquam! Minima harum sint porro quaerat tempore doloribus.</p>
+                    <p>Egresada de la carrera de Diseño Gráfico el año 2013. Comencé a trabajar en el área de diseño e impresiones en Explosa Publicidad.
+                    </p>
+                    <p>Adquirí conocimientos básico en Photoshop e Illustrator y a implementar ambas herramientas que hasta el día de hoy me acompañan a la hora de realizar gráficas. Además aprendí el uso de plotter de corte e impresiones de la marca Mimaki.
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, provident omnis nam sint, quia nesciunt enim deserunt dolorem dignissimos, veniam illum laudantium numquam! Minima harum sint porro quaerat tempore doloribus.</p>
