cambio texto parrafo derecho

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, provident omnis nam sint, quia nesciunt enim deserunt dolorem dignissimos, veniam illum laudantium numquam! Minima harum sint porro quaerat tempore doloribus.</p>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, provident omnis nam sint, quia nesciunt enim deserunt dolorem dignissimos, veniam illum laudantium numquam! Minima harum sint porro quaerat tempore doloribus.</p>
+                    <p>Los años siguientes seguí experimentando nuevos desafíos laborales y a plantearme nuevas ideas de aprendizaje para mi carrera. Tomé cursos de: Community Manager, Taller de Fotografía, Wordpress y Facebook Ads.</p>
+                    <p>Hoy por hoy, sigo con esa ambición y decidí seguir el camino de un aprendizaje más ligado a la tecnología, por eso estoy ad portas de aprender Diseño UX/UI.</p>
                 </div>
             </div>
             
